--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=HVTSchool
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=HVTSchool;sendTimeAsDateTime=false;
 spring.datasource.username=sa
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
