--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -13,4 +13,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dia
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = none
 
-url = /, /css/**, /js/**, /img/**, /login, /api/**
+url = /, /css/**, /js/**, /img/**, \
+      /login, /api/**
