--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -13,5 +13,20 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dia
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = none
 
-url = /, /css/**, /js/**, /img/**, \
-      /login, /api/**
+userUrl = /, /css/**, /js/**, /img/**, /login, /api/**, \
+          /timetableClass, /timetableTeacher, /violationListOfClass, /history, \
+          /violationList, /assignEmulation, /manageViolationEnteringTime, \
+          /rankByWeek, /rankByMonth, /rankBySemester, /rankByYear
+
+adminUrl = /manageAccount, /createAccount, /manageTeacher, /createTeacher, /teacherInformation, \
+            /manageClass, /createClass, /editClass, /createGifftedClass, /deleteGifftedClass, \
+            /schoolYearList, /schoolYearList, /editSchoolYear, \
+            /addViolationType, /addViolation, /editViolationType, /editViolation, /createViolationEnteringTime
+
+manageTimetableUrl = /manageTimetable
+
+gradingToEmulationUrl = /gradingToEmulation
+
+viewRequestUrl = /viewRequest
+
+newletterUrl = /createPost, /managePost
