fix không đăng nhập vào được postdetail

--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -16,7 +16,8 @@ spring.jpa.hibernate.ddl-auto = none
 userUrl = /, /css/**, /js/**, /img/**, /login, /api/**, \
           /timetableClass, /timetableTeacher, /violationListOfClass, /history, \
           /violationList, /assignEmulation, /manageViolationEnteringTime, \
-          /rankByWeek, /rankByMonth, /rankBySemester, /rankByYear
+          /rankByWeek, /rankByMonth, /rankBySemester, /rankByYear, \
+          /postDetail**
 
 adminUrl = /manageAccount, /createAccount, /manageTeacher, /createTeacher, /teacherInformation, \
             /manageClass, /createClass, /editClass, /createGifftedClass, /deleteGifftedClass, \
