--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -17,7 +17,7 @@ userUrl = /, /css/**, /js/**, /img/**, /login, /api/**, \
           /timetableClass, /timetableTeacher, /violationListOfClass, /history, \
           /violationList, /assignEmulation, /manageViolationEnteringTime, \
           /rankByWeek, /rankByMonth, /rankBySemester, /rankByYear, \
-          /postDetail**
+          /postDetail**, /forgotPassword
 
 adminUrl = /manageAccount, /createAccount, /manageTeacher, /createTeacher, /teacherInformation, \
             /manageClass, /createClass, /editClass, /createGifftedClass, /deleteGifftedClass, \
