--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=HVTSchoolDB;sendTimeAsDateTime=false;
-spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.url=jdbc:sqlserver://hvtschool.database.windows.net:1433;database=HVTSchool;user=hvt_admin@hvtschool;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;sendTimeAsDateTime=false;
+spring.datasource.username=hvt_admin@hvtschool
+spring.datasource.password=123456789Aa
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql = true
 #spring.jpa.hibernate.ddl-auto =none
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dia
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = none
-
+server.port=5000
 userUrl = /, /css/**, /js/**, /img/**, /login, /api/**, \
           /timetableClass, /timetableTeacher, /violationListOfClass, /history, \
           /violationList, /assignEmulation, /manageViolationEnteringTime, \
