change rank month sort

--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dia
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = none
-
+server.port=8081
 userUrl = /, /css/**, /js/**, /img/**, /login, /api/**, \
           /timetableClass, /timetableTeacher, /violationListOfClass, /history, \
           /violationList, /assignEmulation, /manageViolationEnteringTime, \
