Add new page showViolationList

--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dia
 spring.jpa.hibernate.ddl-auto = none
 server.port=8081
 userUrl = /, /css/**, /js/**, /img/**, /login, /api/**, \
-          /timetableClass, /timetableTeacher, /violationListOfClass, /history, \
+          /timetableClass, /timetableTeacher, /violationListOfClass, /showViolationList, /history, \
           /violationList, /assignEmulation, /manageViolationEnteringTime, \
           /rankByWeek, /rankByMonth, /rankBySemester, /rankByYear, \
           /postDetail**, /forgotPassword
